<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menu_home_info"
        android:icon="@drawable/ic_info_white"
        android:title="@string/informacoes"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_home_config"
        android:icon="@drawable/ic_configuracao_white"
        android:title="@string/settings"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_home_register"
        android:icon="@drawable/ic_user_registration"
        android:title="@string/registro_de_produto"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_home_teste_unitario"
        android:icon="@drawable/ic_button_teste_unitario"
        android:title="@string/testeUnitario"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_home_parear"
        android:icon="@drawable/ic_bluetooth_serching_dark"
        android:title="@string/parear"
        android:visible="true"
        app:showAsAction="always" />

</menu>