<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <RadioGroup
        android:id="@+id/dialog_relatorio_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:checkedButton="@+id/dialog_relatorio_radiobutton_novo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/dialog_relatorio_radiobutton_novo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:buttonTint="@color/button_blue_primary"
            android:text="@string/criar_um_novo_relat_rio" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_relatorio_input_placa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/placa_do_carro"
            android:textColorHint="@color/button_blue_primary"
            app:boxStrokeColor="@color/button_blue_primary"
            app:prefixTextColor="@color/button_blue_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="8"
                android:maxLines="1"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioButton
            android:id="@+id/dialog_relatorio_radiobutton_existente"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:buttonTint="@color/button_blue_primary"
            android:text="@string/selecionar_um_relat_rio_existente" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>