<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_ask_restart_rasther"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:textSize="24sp"
        android:text="@string/content_activity_ask_restart_rasther"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/rasther"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_ask_restart_rasther"
        app:layout_constraintBottom_toTopOf="@id/button_recover_logical_interface"/>

    <Button
        android:id="@+id/button_recover_logical_interface"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_recover_logical_interface"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:onClick="onClickBotaoRecuperarInterfaceLogica"
        app:layout_constraintEnd_toStartOf="@+id/button_restart_rasther_voltar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/button_restart_rasther_voltar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/back"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:onClick="onClickBotaoRestartRastherVoltar"
        app:layout_constraintStart_toEndOf="@id/button_recover_logical_interface"
        app:layout_constraintBottom_toBottomOf="@id/button_recover_logical_interface"
        app:layout_constraintTop_toTopOf="@id/button_recover_logical_interface"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>