<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey">



    <ImageButton
        android:id="@+id/btnDiagnostic"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginBottom="24dp"
        android:background="@color/background_grey"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_button"
        app:layout_constraintBottom_toTopOf="@id/btnReports"
        app:layout_constraintStart_toStartOf="@id/btnReports" />

    <ImageView
        android:id="@+id/home_icon_diagnostic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_motor"
        app:layout_constraintBottom_toBottomOf="@id/btnDiagnostic"
        app:layout_constraintStart_toStartOf="@id/btnDiagnostic"
        app:layout_constraintTop_toTopOf="@id/btnDiagnostic" />

    <TextView
        android:id="@+id/tv_diagnostico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:text="@string/diagnostic"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btnDiagnostic"
        app:layout_constraintStart_toStartOf="@id/btnDiagnostic"
        app:layout_constraintTop_toTopOf="@id/btnDiagnostic" />

    <ImageButton
        android:id="@+id/btnReports"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:background="@color/background_grey"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_button"
        app:layout_constraintBottom_toTopOf="@id/logo_tecnomotor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNewWorkshop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="58dp"></Button>

    <ImageView
        android:id="@+id/home_icon_reports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_relatorio"
        app:layout_constraintBottom_toBottomOf="@id/btnReports"
        app:layout_constraintStart_toStartOf="@id/btnReports"
        app:layout_constraintTop_toTopOf="@id/btnReports" />

    <TextView
        android:id="@+id/tv_relatorio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:text="@string/reports"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btnReports"
        app:layout_constraintStart_toStartOf="@id/btnReports"
        app:layout_constraintTop_toTopOf="@id/btnReports" />

    <ImageButton
        android:id="@+id/btnDevRequest"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:background="@color/background_grey"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_button"
        app:layout_constraintStart_toStartOf="@id/btnReports"
        app:layout_constraintTop_toBottomOf="@id/btnReports" />

    <ImageView
        android:id="@+id/home_icon_devRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_solicita_sistemas"
        app:layout_constraintBottom_toBottomOf="@id/btnDevRequest"
        app:layout_constraintStart_toStartOf="@id/btnDevRequest"
        app:layout_constraintTop_toTopOf="@id/btnDevRequest" />

    <TextView
        android:id="@+id/tv_solicitacao_de_desenvolvimento"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:text="@string/development_request"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btnDevRequest"
        app:layout_constraintStart_toStartOf="@id/btnDevRequest"
        app:layout_constraintTop_toTopOf="@id/btnDevRequest" />

    <ImageView
        android:id="@+id/logo_tecnomotor"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_icon_tecnomotor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/fHome_Wait"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/btnDiagnostic"
        app:layout_constraintStart_toEndOf="@+id/btnDiagnostic"
        app:layout_constraintTop_toTopOf="@+id/btnDiagnostic" />
</androidx.constraintlayout.widget.ConstraintLayout>